build: include the documentation git url to direct the deploy to the organization repo
main

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Myceliu API Gateway
+repo_url: https://github.com/LepistaBioinformatics/mycelium-docs
 nav:
   - Home: index.md
   - Introduction: intro.md
